[gd_scene load_steps=31 format=3 uid="uid://ojlyfj8c8onn"]

[ext_resource type="Script" uid="uid://bwfosq83v8akn" path="res://Scripts/boss_phase2.gd" id="1_vlbx0"]
[ext_resource type="Texture2D" uid="uid://cfv2smjpxp84o" path="res://Assets/Sprites/Enemies/big bad wolf_down.png" id="2_40vci"]
[ext_resource type="Texture2D" uid="uid://bjll8kd7gqdoa" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_rage1.png" id="3_33gi6"]
[ext_resource type="Texture2D" uid="uid://dtrqhjels5yc4" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_down1.png" id="3_310wp"]
[ext_resource type="Texture2D" uid="uid://ck4ea275tmm3d" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_down2.png" id="4_5g7dk"]
[ext_resource type="Texture2D" uid="uid://cyci8txft7w6q" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_rage2.png" id="4_knpei"]
[ext_resource type="Texture2D" uid="uid://cr3rrdtkmdd7g" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_down3.png" id="5_kbdwg"]
[ext_resource type="Texture2D" uid="uid://8o71ei8po4re" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_rage3.png" id="5_psgto"]
[ext_resource type="Texture2D" uid="uid://dwne3epmr831b" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_rage4.png" id="6_6n7d7"]
[ext_resource type="Texture2D" uid="uid://dbg4201r10tqq" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_down4.png" id="6_33gi6"]
[ext_resource type="Texture2D" uid="uid://f2ebaum03yvm" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_down5.png" id="7_knpei"]
[ext_resource type="Texture2D" uid="uid://djbv02ceg6yqm" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_rage5.png" id="7_qv6eb"]
[ext_resource type="Texture2D" uid="uid://drgujho4didjm" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_left1.png" id="8_psgto"]
[ext_resource type="Texture2D" uid="uid://baqsn6mhdk4se" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_left2.png" id="9_6n7d7"]
[ext_resource type="Texture2D" uid="uid://7n7s65bqv17m" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_left3.png" id="10_qv6eb"]
[ext_resource type="Texture2D" uid="uid://bfo4vnpiawdoo" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_left4.png" id="11_406n7"]
[ext_resource type="Texture2D" uid="uid://dkvf7r3yr5my" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_left5.png" id="12_bicdw"]
[ext_resource type="Texture2D" uid="uid://ctx51ajba1osj" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_right1.png" id="13_fgf48"]
[ext_resource type="Texture2D" uid="uid://dwye5ilc6sbfc" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_right2.png" id="14_aomv8"]
[ext_resource type="Texture2D" uid="uid://byrdwd8h08y3h" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_right3.png" id="15_4j0bc"]
[ext_resource type="Texture2D" uid="uid://cebc68wgeyv1q" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_right4.png" id="16_upqtc"]
[ext_resource type="Texture2D" uid="uid://bvd4ba48aceny" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_right5.png" id="17_dfcwt"]
[ext_resource type="Texture2D" uid="uid://t0ohq7n0s45r" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_up1.png" id="18_wcm26"]
[ext_resource type="Texture2D" uid="uid://d10v4o5vgvefh" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_up2.png" id="19_wr1fb"]
[ext_resource type="Texture2D" uid="uid://dxxxkqusemhtu" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_up3.png" id="20_bhrww"]
[ext_resource type="Texture2D" uid="uid://nm5bwj4wiauf" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_up4.png" id="21_rv7q1"]
[ext_resource type="Texture2D" uid="uid://cvgoa3spkd5wf" path="res://Assets/Sprites/Enemies/Animations/big bad wolf/big bad wolf_up5.png" id="22_aknae"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ahqnb"]
size = Vector2(258, 330)

[sub_resource type="SpriteFrames" id="SpriteFrames_msr80"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_40vci")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_33gi6")
}, {
"duration": 1.0,
"texture": ExtResource("4_knpei")
}, {
"duration": 1.0,
"texture": ExtResource("5_psgto")
}, {
"duration": 1.0,
"texture": ExtResource("6_6n7d7")
}, {
"duration": 1.0,
"texture": ExtResource("7_qv6eb")
}],
"loop": false,
"name": &"rage",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_310wp")
}, {
"duration": 1.0,
"texture": ExtResource("4_5g7dk")
}, {
"duration": 1.0,
"texture": ExtResource("5_kbdwg")
}, {
"duration": 1.0,
"texture": ExtResource("6_33gi6")
}, {
"duration": 1.0,
"texture": ExtResource("7_knpei")
}],
"loop": false,
"name": &"walking_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_psgto")
}, {
"duration": 1.0,
"texture": ExtResource("9_6n7d7")
}, {
"duration": 1.0,
"texture": ExtResource("10_qv6eb")
}, {
"duration": 1.0,
"texture": ExtResource("11_406n7")
}, {
"duration": 1.0,
"texture": ExtResource("12_bicdw")
}],
"loop": false,
"name": &"walking_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_fgf48")
}, {
"duration": 1.0,
"texture": ExtResource("14_aomv8")
}, {
"duration": 1.0,
"texture": ExtResource("15_4j0bc")
}, {
"duration": 1.0,
"texture": ExtResource("16_upqtc")
}, {
"duration": 1.0,
"texture": ExtResource("17_dfcwt")
}],
"loop": false,
"name": &"walking_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_wcm26")
}, {
"duration": 1.0,
"texture": ExtResource("19_wr1fb")
}, {
"duration": 1.0,
"texture": ExtResource("20_bhrww")
}, {
"duration": 1.0,
"texture": ExtResource("21_rv7q1")
}, {
"duration": 1.0,
"texture": ExtResource("22_aknae")
}],
"loop": false,
"name": &"walking_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_33gi6"]
size = Vector2(371, 374)

[node name="Phase2Character" type="CharacterBody2D" groups=["phase2boss"]]
script = ExtResource("1_vlbx0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.7, 0.7)
shape = SubResource("RectangleShape2D_ahqnb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(7, 7)
sprite_frames = SubResource("SpriteFrames_msr80")
animation = &"rage"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(7, 7)
texture = ExtResource("2_40vci")

[node name="RageArea" type="Area2D" parent="."]
collision_layer = 9
collision_mask = 9

[node name="RageCollision" type="CollisionShape2D" parent="RageArea"]
position = Vector2(0.5, -1)
shape = SubResource("RectangleShape2D_33gi6")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
